# TelegramDataVisualization-

./: README.md  TelegramParsing.py  app.py  cleaned_file_6.csv  demo.py  main.py  output.csv  processed_vacancies.csv  pyproject.toml  run.sh
templates/: dashbord.html  error.html
