[project]
name = "tgapp"
version = "0.1.0"
description = ""
authors = [
    {name = "Pavel Lekomtsev",email = "polekomtsev@edu.hse.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "plotly (>=6.0.1,<7.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "spacy (>=3.8.4,<4.0.0)",
    "rapidfuzz (>=3.12.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
